Delete modal on mobile version fix

--- a/client/src/app/components/Password.module.css
+++ b/client/src/app/components/Password.module.css
@@ -185,4 +185,7 @@
     margin: 0;
     margin-top: 15px;
    }
+   .deleteModal{
+    width: 90vw;
+   }
 }
